ApiClient is more robust, index.js needs updating to match changes

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "node src/index.js"
+    "start": "node src/index.js",
+    "feed": "node src/find_all_touched.js"
   },
   "keywords": [],
   "author": "",
@@ -14,6 +15,7 @@
     "dayjs": "^1.11.4",
     "dotenv": "^16.0.1",
     "exceljs": "^4.3.0",
+    "log-update": "^5.0.1",
     "node-fetch": "^3.2.9"
   }
 }
